--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 
     <canvas id="neural-bg"></canvas>
 
-    <nav id="navbar">
+   <nav id="navbar">
         <div class="logo">&lt;MP /&gt;</div>
         <ul class="nav-links">
-            <li><a href="#home" class="nav-link clickable">Home</a></li>
-            <li><a href="#about" class="nav-link clickable">About</a></li>
+            <li><a href="#home" class="nav-link active clickable">Home</a></li> <li><a href="#about" class="nav-link clickable">About</a></li>
             <li><a href="#gen-ai" class="nav-link clickable">GenAI</a></li>
             <li><a href="#experience" class="nav-link clickable">Experience</a></li>
             <li><a href="#projects" class="nav-link clickable">Projects</a></li>
             <li><a href="#services" class="nav-link clickable">Services</a></li>
-            <li><a href="contact.html" class="nav-link clickable">Contact</a></li>
+            <li><a href="vidhai.html" class="nav-link clickable">Vidhai AI</a></li> <li><a href="contact.html" class="nav-link clickable">Contact</a></li>
         </ul>
         <div class="hamburger clickable">
             <span></span>
@@ -52,6 +51,11 @@
                         <a href="#gen-ai" class="btn btn-primary clickable">View GenAI Work</a>
                         <a href="#about" class="btn btn-outline clickable">About Me</a>
                     </div>
+                    <div class="hero-extra-links" style="margin-top: 2rem; display: flex; gap: 1rem; justify-content: center;">
+                        <a href="vidhai.html" class="btn btn-badge clickable">
+                            <img src="images/vidhai.png" alt="Vidhai Logo" class="btn-badge-icon" onerror="this.style.display='none';"> Vidhai AI Founder
+                        </a>
+                        </div>
                 </div>
                 <div class="hero-image">
                     <div class="floating-card">
